[project]
name = "pyrage"
version = "0.0.0"
requires-python = "~=3.14.0"
dependencies = [
    "boto3-stubs~=1.42.22",
    "iterable-io",
    "tqdm",
]

[dependency-groups]
dev = ["mypy", "ruff", { include-group = "group-types" }]

group-types = ["types-boto3[s3]", "types-redis", "types-requests", "types-tqdm"]
group-requests = ["requests"]

storage-alist = ["h2", "python-alist"]
storage-asar = ["asar"]
storage-ddl = [{ include-group = "group-requests" }]
storage-dropbox = ["dropbox"]
storage-git = ["GitPython"]
storage-gitea = ["py-gitea"]
storage-github = ["PyGithub", { include-group = "group-requests" }]
storage-gitlab = ["python-gitlab"]
storage-internetarchive = ["internetarchive"]
storage-karaokemugen = [{ include-group = "group-requests" }]
storage-kemono = [{ include-group = "group-requests" }]
storage-lexaloffle = [{ include-group = "group-requests" }]
storage-local = []
storage-minio = ["minio"]
storage-myrient = ["beautifulsoup4", { include-group = "group-requests" }]
storage-pokemontcgimages = [
  "pokemontcgsdk",
  { include-group = "group-requests" },
]
storage-s3 = ["boto3"]
storage-sftf = ["paramiko"]
storage-tar = []
storage-tcgdexassets = ["tcgdex-sdk", { include-group = "group-requests" }]
storage-webdav = ["webdavclient3"]
storage-zip = []

extension-filefilter = []

extension-filelistcache-bson = ["PyMongo"]
extension-filelistcache-csv = []
extension-filelistcache-flat = ["flatbuffers"]
extension-filelistcache-json = []
extension-filelistcache-msgpack = ["msgpack"]
extension-filelistcache-proto = ["protobuf"]
extension-filelistcache-pickle = []
extension-filelistcache-sqlite = []

extnesion-filelistmapping-local = []
extnesion-filelistmapping-redis = ["redis"]
extnesion-filelistmapping-sqlite = []

extension-filetransformer = []

storage-docker = ["docker"]
storage-ftp = ["ftputil"]
storage-mongo = ["pymongo"]
storage-qbtorrent = ["qbittorrent-api"]
storage-romm = ["requests-toolbelt", { include-group = "group-requests" }]
storage-smb = ["smbprotocol"]
storage-sophon = ["HoyoSophonDL", "python-magic-bin", "zstd"]
storage-starlauncher = [
  "star-launcher-sdk @ git+https://github.com/HellLord77/star-launcher-sdk.git@v0.1.0"
]
# storage-steam = [
#   "steam[client] @ git+https://github.com/solsticegamestudios/steam.git@30437f32e625b52c6cee34dac5eb14652447379f",
#   "zstandard",
# ]
storage-waybackmachine = ["wayback"]
extension-filelistcache-ini = []

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
